--- a/index.html
+++ b/index.html
@@ -145,14 +145,18 @@
 }
 
     async function createShirt() {
-      const res = await fetch('https://bauti.app.n8n.cloud/webhook-test/generate-image', {
+      const res = await fetch('https://bauti.app.n8n.cloud/webhook-test/create-shirt', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ image_url: window.generatedImage, token: 'secret123' })
+        body: JSON.stringify({
+          image_url: window.generatedImage, // from Bria > ImgBB
+          file_name: `shirt-${Date.now()}.png` // dynamic name
+        })
       });
       const data = await res.json();
-      window.location.href = data.shopify_url;
+      window.location.href = data.shopify_url; // once available
     }
+
 
     async function loadProducts() {
       allProducts = [
