--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         })
       });
       const data = await res.json();
-      window.location.href = data.shopify_url; // once available
+      window.top.location.href = data.shopify_url; // once available
     }
 
 
